added ai to drug info generation

--- a/admin-staging.html
+++ b/admin-staging.html
@@ -701,7 +701,7 @@ ${ drugNameEl.value }
                     } else {
                         console.log("inputEL: null");
                         // if it doesn't exist, add a new row
-                        addDrugAiFieldRow(key, value);
+                        //addDrugAiFieldRow(key, value);
                     }
                 });
 
