Update type filter buttons in index.html for improved responsiveness; change layout to flex-column on small screens and ensure buttons are full-width on mobile.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </div>
 
     <!-- Type filter buttons -->
-    <div class="flex gap-2 mb-6" id="type-filter-buttons">
-      <button class="type-btn bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded" data-type="Antibiotics&Bugs">Antibiotics&Bugs</button>
-      <button class="type-btn bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded" data-type="Endocarditis">Endocarditis</button>
-      <button class="type-btn bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded" data-type="Immunocompromised host">Immunocompromised host</button>
+    <div class="flex flex-col sm:flex-row gap-2 mb-6" id="type-filter-buttons">
+      <button class="type-btn bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded w-full sm:w-auto" data-type="Antibiotics&Bugs">Antibiotics&Bugs</button>
+      <button class="type-btn bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded w-full sm:w-auto" data-type="Endocarditis">Endocarditis</button>
+      <button class="type-btn bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded w-full sm:w-auto" data-type="Immunocompromised host">Immunocompromised host</button>
     </div>
     <div id="type-prompt" class="mb-4 text-gray-600">Choose a story type above.</div>
     <ul id="story-list" class="space-y-4">
