--- a/admin-staging.html
+++ b/admin-staging.html
@@ -53,6 +53,7 @@
 
         <!-- MAIN UI ----------------------------------------------------------- -->
         <div id="admin-ui" class="hidden bg-white p-6 rounded shadow space-y-4">
+            <button id="back-to-welcome-btn" class="mb-4 bg-gray-200 hover:bg-gray-300 text-gray-800 px-3 py-1 rounded text-xs">← Back</button>
             <!-- 1️⃣ Create-story button + hidden form -->
             <div class="mb-4">
                 <!-- hidden until clicked -->
@@ -806,6 +807,8 @@ ${ drugNameEl.value }
 
 
         /* --------------------------- UI logic ----------------------------- */
+        // Track last loaded JSON for unsaved changes detection
+        let lastLoadedStoryJson = '';
         storyIdInput.onchange = async () => {
             const id = storyIdInput.value;
             if (!id) return hidePresentation();
@@ -813,6 +816,7 @@ ${ drugNameEl.value }
             if (!snap.exists()) return hidePresentation();
             const data = snap.data();
             storyJsonArea.value = orderKeys(data);
+            lastLoadedStoryJson = storyJsonArea.value;
             setupPresentation();
             try {
                 const full = JSON.parse(storyJsonArea.value);
@@ -1804,6 +1808,15 @@ ${ drugNameEl.value }
 
         // Initialize sort icons when page loads
         renderSortIcons();
+
+        // Back button logic
+        const backToWelcomeBtn = document.getElementById('back-to-welcome-btn');
+        backToWelcomeBtn.onclick = () => {
+            adminUI.classList.add('hidden');
+            drugsArea.classList.add('hidden');
+            welcomeView.classList.remove('hidden');
+            showStatus('');
+        };
 
     </script>
         <div id="create-story-modal" class="fixed inset-0 bg-black bg-opacity-30 flex items-center justify-center z-50 hidden">
